--- a/resources.Rmd
+++ b/resources.Rmd
@@ -10,44 +10,17 @@ source("knitr_setup.R")
 
 ---
 
-# Getting Help
+# Communication & Help
 
-```{r child = here::here('syllabus', 'getting-help.Rmd')}
+```{r child = here::here('syllabus', 'communication-help.Rmd')}
 ```
 
 ---
 
 # Doing stuff in `R`
 
-## Data Wrangling
-
-- Wickham, Hadley. "R for Data Science"
-[[free online](https://r4ds.had.co.nz/){target="_blank"}],
-[[buy on amazon](https://www.amazon.com/Data-Science-Transform-Visualize-Model/dp/1491910399){target="_blank"}]
-
-## Data Visualization
-
-- Healy, Kieran. "Data Visualization: A practical introduction"
-[[free online](http://socviz.co/){target="_blank"}],
-[[buy on amazon](https://www.amazon.com/Data-Visualization-Introduction-Kieran-Healy/dp/0691181624){target="_blank"}]
-- Wilke, Claus O. "Fundamentals of Data Visualization"
-[[free online](https://serialmentor.com/dataviz/){target="_blank"}],
-[[buy on amazon](https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089){target="_blank"}]
-- [ggThemeAssist](https://github.com/calligross/ggthemeassist): Package for customizing plotting themes
-
-## RStudio [cheatsheets](https://www.rstudio.com/resources/cheatsheets/)
-
-- [RMarkdown](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf){target="_blank"}
-- [Data wrangling with the `dplyr` library](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf){target="_blank"}
-- [Data visualization with the `ggplot2` library](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf){target="_blank"}
-
-## RMarkdown
-
-- [60 second markdown guide](https://commonmark.org/help/){target="_blank"}
-- [10 minute markdown tutorial](https://commonmark.org/help/tutorial/){target="_blank"}
-- [Markdown It](https://markdown-it.github.io){target="_blank"}: Quickly demo Markdown code.
-- [Table generator](http://www.tablesgenerator.com/){target="_blank"}: Create tables and get export code for multiple formats.
-- [CMU RMarkdown guide (detailed)](http://www.stat.cmu.edu/~cshalizi/rmarkdown/){target="_blank"}
+```{r child = here::here('syllabus', 'texts.Rmd')}
+```
 
 ---
 
