--- a/L4.1-conditionals.Rmd
+++ b/L4.1-conditionals.Rmd
@@ -14,7 +14,7 @@ The most prominent examples of a conditional statement is the `if` statement, an
 
 ---
 
-# If
+# if
 
 The basic format of an `if` statement in R is as follows:
 
@@ -28,7 +28,7 @@ if ( CONDITION ) {
 
 If the condition is `TRUE`, then R will execute the statements contained in the curly braces, otherwise it will skip it. This schematic illustrates the idea:
 
-<img src="./images/branch_if.png" width=500px>
+![](images/condition_if.png){ width=400 }
 
 ## Example 1
 
@@ -64,7 +64,7 @@ absValue(7)  # Returns 7
 absValue(-7) # Also returns 7
 ```
 
-# If else
+# if else
 
 You can extend the `if` statement to include an `else` statement as well, leading to the following syntax:
 
@@ -82,7 +82,7 @@ if ( CONDITION ) {
 
 The interpretation of this version is similar. If the condition is `TRUE`, then the contents of the first block of code are executed; but if it is `FALSE`, then the contents of the second block of code are executed instead. The schematic illustration of an if-else construction looks like this:
 
-<img src="./images/branch_ifelse.png" width=550px>
+![](images/condition_if_else.png){ width=500 }
 
 ## Example
 
@@ -110,7 +110,7 @@ f(1)
 f(2)
 ```
 
-# Else if
+# else if
 
 You can also chain multiple `else if` statements together for a more complex conditional statement. For example, if you're trying to assign letter grades to a numeric test score, you can use a series of `else if` statements to search for the bracket the score lies in:
 
