License update and typos

--- a/LICENSE.Rmd
+++ b/LICENSE.Rmd
@@ -17,6 +17,8 @@ other courses and workshops, including:
 Name | Author | Links
 --------- | --- | ---
 STAT 545 | U. of British Columbia | [course](http://stat545.com/); [github](https://github.com/STAT545-UBC)
+R for Data Science | Garrett Grolemund & Hadley Wickham | [book](https://r4ds.had.co.nz/); [github](https://github.com/hadley/r4ds)
+Handling Strings with R | Gaston Sanchez | [book](https://www.gastonsanchez.com/r4strings/); [github](https://github.com/gastonstat/r4strings)
 EEB313: Quantitative Methods in R for Biology | [U of T Coders](https://uoftcoders.github.io/studyGroup/) | [course](https://uoftcoders.github.io/rcourse/index.html); [github](https://github.com/uoftcoders/rcourse)
 Modern Dive | Chester Ismay & Albert Y. Kim | [course](https://moderndive.netlify.com/); [github](https://github.com/moderndive/moderndive_book)
 Learning statistics with R | Danielle Navarro | [course](https://djnavarro.github.io/tidylsrbook/); [github](https://github.com/djnavarro/rbook)
